none: Fix `+UseCompactObjectHeaders` flag.